<resources>
    <string name="April">April</string>
    <string name="August">August</string>
    <string name="Avatar">Avatar</string>
    <string name="CheckBox">Check box</string>
    <string name="Close">Close</string>
    <string name="December">December</string>
    <string name="EnterDate">Enter Date</string>
    <string name="February">February</string>
    <string name="Friday">F</string>
    <string name="Icon">Icon</string>
    <string name="InvalidDate">Invalid Date</string>
    <string name="InvalidDay">Invalid Day</string>
    <string name="InvalidDayMonth">Invalid Day and Month</string>
    <string name="InvalidDayYear">Invalid Day and Year</string>
    <string name="InvalidMonth">Invalid Month</string>
    <string name="InvalidMonthYear">Invalid Month and Year</string>
    <string name="InvalidYear">Invalid Year</string>
    <string name="January">January</string>
    <string name="July">July</string>
    <string name="June">June</string>
    <string name="March">March</string>
    <string name="May">May</string>
    <string name="Monday">M</string>
    <string name="November">November</string>
    <string name="October">October</string>
    <string name="Saturday">S</string>
    <string name="September">September</string>
    <string name="StepText">Step %1$d of %2$d</string>
    <string name="Sunday">S</string>
    <string name="Thursday">T</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_error">Icon Error</string>
    <string name="access_success">Icon Success</string>
    <string name="access_warning">Icon Warning</string>
    <string name="active_page">Active Page</string>
    <string name="add_new">Add new</string>
    <string name="all_apps">All Apps</string>
    <string name="allow_permission">Allow permissions</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_response">API Response:</string>
    <string name="app_name">eSIM Provisioning</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_button">Back Button</string>
    <string name="back_pressed">Are you sure you want to go back?</string>
    <string name="back_pressed_description">A connection attempt with the STB is in progress.</string>
    <string name="bluetooth_is_off_description">Your remote has to be connected through Bluetooth, please turn on your Bluetooth</string>
    <string name="bluetooth_is_off_title">Bluetooth is off</string>
    <string name="bluetooth_is_on">Bluetooth is on</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="broadcast_not_received">Broadcast not received within 30 sec.</string>
    <string name="bt_add_remote">Add remote</string>
    <string name="bt_pairing_reason">is unable to pair with your app.</string>
    <string name="bt_stop_scan">Stop scanning</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_permission_description">"Scanning feature requires camera permission. 
 Please allow the permission at [Setting] > [Permission]"</string>
    <string name="camera_permission_title">Please allow camera permission</string>
    <string name="cancel_txt">Cancel</string>
    <string name="changed_successfully">Installation completed successfully</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_a_different_STB">Choose a different STB</string>
    <string name="choose_a_different_STB_dialog_description">Are you sure you want to choose different Set Top Box.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_button">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_button">Confirm</string>
    <string name="connect_back">Reconnecting to STB in %1$s seconds</string>
    <string name="connect_through_bluetooth">Connect through Bluetooth</string>
    <string name="connect_through_bluetooth_desc">A digital Remote is created through Bluetooth.</string>
    <string name="connecting_txt">Connecting...</string>
    <string name="connection_timeout">Connection timeout !!</string>
    <string name="connection_timeout_message">Please enter pin which is displayed on TV within 30 seconds.</string>
    <string name="continue_txt">Continue</string>
    <string name="copy">Copy</string>
    <string name="data_set_successfully">Data set successfully</string>
    <string name="day_friday">Fri</string>
    <string name="day_monday">Mon</string>
    <string name="day_saturday">Sat</string>
    <string name="day_sunday">Sun</string>
    <string name="day_thursday">Thu</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_web_client_id">879078617385-bmhjaqth7mjo6bmkhvdeib5i5fo8vfho.apps.googleusercontent.com</string>
    <string name="dest_title">destination title</string>
    <string name="device_connected">Able to pair and connect with device</string>
    <string name="device_edit">Edit device name</string>
    <string name="device_edit_msg">You have unsaved changes. Do you want to save them?</string>
    <string name="device_found">Device found</string>
    <string name="device_name_check">"Device name can't have only special characters."</string>
    <string name="esim_bt_mac_instruction">Enter BTMAC of device</string>
    <string name="esim_btn_next">Next</string>
    <string name="esim_delete_profile">"Delete
Profile"</string>
    <string name="esim_desc">Description</string>
    <string name="esim_device_info">Device Info</string>
    <string name="esim_eid_caps">EID</string>
    <string name="esim_eid_instructions">Enter EID of device</string>
    <string name="esim_get_cell_info_by_cell_id">Get Cell Info By Cell ID</string>
    <string name="esim_get_current_cell_id_list">Get Current Cell Id List</string>
    <string name="esim_install_profile">"Install
Profile"</string>
    <string name="esim_model_no_instruction">Enter Model No. of device</string>
    <string name="esim_no_qr">"Can't find the QR code?"</string>
    <string name="esim_please_scan_the_qr_code">Please scan the QR code</string>
    <string name="esim_profile_list">Profile List</string>
    <string name="esim_reboot_device_btn">Reboot Device</string>
    <string name="esim_release_bt">Release BT</string>
    <string name="esim_send_notification">Send Notification</string>
    <string name="esim_showing_response">Showing Response</string>
    <string name="esim_try_manually">Try Manually</string>
    <string name="jfe_change_number">Change Number?</string>
    <string name="jfe_enter_otp">enter OTP</string>
    <string name="jfe_please">Please</string>
    <string name="jfe_receive_otp">Didn’t receive OTP?</string>
    <string name="jfe_resend">Resend OTP?</string>
    <string name="jfe_submit">SUBMIT</string>
    <string name="jfe_talkback_back">Back</string>
    <string name="jfe_terms_conditions">By continuing, you agree to our Terms of Service and Privacy &amp; Legal Policy</string>
    <string name="jfe_text_logging">Logging in</string>
    <string name="jfe_text_sending_otp">Sending OTP</string>
    <string name="jfe_wrong_otp">" Wrong OTP"</string>
</resources>