<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:gravity="center" android:id="@id/tv_response" android:padding="@dimen/px8" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="@dimen/px4" android:text="@string/esim_showing_response" android:foregroundGravity="center" app:layout_constraintBottom_toTopOf="@id/const_get" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/const_get" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_response">
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_get_eid" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_eid_caps" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_get_profile" app:layout_constraintStart_toStartOf="parent" />
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_get_profile" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_profile_list" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_get_device_info" app:layout_constraintStart_toEndOf="@id/btn_get_eid" />
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_get_device_info" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_device_info" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_get_profile" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/const_set" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/const_put" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/const_get">
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_install_profile" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_install_profile" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_delete_profile" app:layout_constraintStart_toStartOf="parent" />
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_delete_profile" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_delete_profile" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_send_notifcation" app:layout_constraintStart_toEndOf="@id/btn_install_profile" />
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_send_notifcation" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_send_notification" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_delete_profile" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/const_put" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/const_exit" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/const_set">
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_get_current_cell_id_list" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_get_current_cell_id_list" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_get_cell_info_by_cell_id" app:layout_constraintStart_toStartOf="parent" />
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_get_cell_info_by_cell_id" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_get_cell_info_by_cell_id" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_get_current_cell_id_list" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/const_exit" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/const_put">
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_release_bt" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px4" android:text="@string/esim_release_bt" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_reboot_device" app:layout_constraintStart_toStartOf="parent" />
                <Button android:textSize="@dimen/sp12" android:textColor="@color/white" android:id="@id/btn_reboot_device" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/px5" android:text="@string/esim_reboot_device_btn" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_release_bt" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>