<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/transparent" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/mesh_esim_actionbar_scan_qr" />
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/manual_flow_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/px20">
        <TextView android:textSize="@dimen/sp24" android:textColor="@color/esim_new_ux_text" android:gravity="start" android:id="@id/tv_manual_flow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px24" android:layout_marginTop="40.0dip" android:layout_marginRight="@dimen/px24" android:text="@string/esim_try_manually" android:fontFamily="@font/esim_jiotype_black" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <EditText android:gravity="start" android:id="@id/et_btmac" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px24" android:layout_marginTop="40.0dip" android:layout_marginRight="@dimen/px24" android:hint="@string/esim_bt_mac_instruction" android:inputType="textCapCharacters" android:autofillHints="" />
        <EditText android:gravity="start" android:id="@id/et_model_no" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px24" android:layout_marginTop="40.0dip" android:layout_marginRight="@dimen/px24" android:hint="@string/esim_model_no_instruction" android:inputType="text" android:autofillHints="" />
        <EditText android:gravity="start" android:id="@id/et_eid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px24" android:layout_marginTop="40.0dip" android:layout_marginRight="@dimen/px24" android:hint="@string/esim_eid_instructions" android:inputType="text" android:autofillHints="" />
        <Button android:textSize="@dimen/sp18" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/btn_submit" android:background="@drawable/esim_new_ui_btn_blue" android:padding="@dimen/px10" android:visibility="visible" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/px24" android:layout_marginTop="@dimen/px24" android:layout_marginRight="@dimen/px24" android:layout_marginBottom="@dimen/px40" android:text="@string/esim_btn_next" android:textAllCaps="false" android:fontFamily="@font/esim_jiotype_bold" android:layout_marginHorizontal="@dimen/px24" />
    </LinearLayout>
    <RelativeLayout android:id="@id/scanner_layout" android:background="@color/tv_connected_device_details_textcolor" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/scan_linear_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/px20" android:layout_alignParentBottom="true">
            <TextView android:textSize="@dimen/sp20" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_try_manually" android:paddingLeft="@dimen/px30" android:paddingRight="@dimen/px30" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/px10" android:layout_marginBottom="@dimen/px10" android:text="@string/esim_try_manually" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="-50.0dip" android:layout_above="@id/scan_linear_bottom">
            <TextView android:textSize="@dimen/sp16" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_cant_find_qr_code" android:padding="@dimen/px15" android:paddingLeft="@dimen/px30" android:paddingRight="@dimen/px30" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/esim_no_qr" />
            <androidx.camera.view.PreviewView android:id="@id/ml_kit_barcode_scanner" android:layout_width="280.0dip" android:layout_height="280.0dip" android:layout_marginTop="35.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/appBarLayout2" />
            <TextView android:textSize="@dimen/sp16" android:textColor="@color/white" android:gravity="center" android:id="@id/please_scan_qr_tv" android:padding="@dimen/px30" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/esim_please_scan_the_qr_code" />
            <ImageView android:layout_gravity="center" android:id="@id/imgflash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/flash_disabled" android:contentDescription="@string/esim_desc" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>