<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/activity_otp_verification_0" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:bind="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/layout_toolbar" android:visibility="gone" layout="@layout/layout_toolbar" />
    <ImageView android:id="@id/ivBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_20dp" android:src="@drawable/ic_back_new" android:contentDescription="@string/jfe_talkback_back" />
    <TextView android:textSize="@dimen/_40sp" android:textColor="@color/login_black" android:id="@id/tvLogin" android:paddingLeft="@dimen/_20sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_60sdp" android:text="@string/jfe_please" android:layout_below="@id/ivBack" android:fontFamily="@font/jiotype_black" />
    <TextView android:textSize="@dimen/_40sp" android:textColor="@color/login_black" android:id="@id/tvLoginHeader" android:paddingLeft="@dimen/_20sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/jfe_enter_otp" android:layout_below="@id/tvLogin" android:fontFamily="@font/jiotype_black" />
    <TextView android:textSize="@dimen/sp16" android:textColor="@color/our_service" android:id="@id/tvLoginHeading" android:paddingLeft="@dimen/_16sdp" android:paddingRight="@dimen/_16sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:layout_below="@id/tvLoginHeader" android:fontFamily="@font/jiotype_medium" />
    <TextView android:textSize="@dimen/sp16" android:textColor="@color/jiohome_splash" android:id="@id/tvChangeNumber" android:paddingLeft="@dimen/_16sdp" android:paddingRight="@dimen/_16sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp3" android:text="@string/jfe_change_number" android:layout_below="@id/tvLoginHeading" android:fontFamily="@font/jiotype_medium" />
    <LinearLayout android:orientation="horizontal" android:id="@id/lytOtp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16sdp" android:layout_marginTop="@dimen/_25sdp" android:layout_marginRight="@dimen/_16sdp" android:layout_below="@id/tvLoginHeading">
        <EditText android:gravity="center" android:id="@id/etOtp1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLength="6" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:gravity="center" android:id="@id/etOtp2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:gravity="center" android:id="@id/etOtp3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:gravity="center" android:id="@id/etOtp4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:gravity="center" android:id="@id/etOtp5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
        <EditText android:gravity="center" android:id="@id/etOtp6" android:layout_width="0.0dip" android:layout_height="fill_parent" android:maxLength="1" android:layout_weight="1.0" android:inputType="number" />
    </LinearLayout>
    <ImageView android:id="@id/ivWarning" android:visibility="gone" android:layout_width="@dimen/_15dp" android:layout_height="@dimen/_15dp" android:layout_marginLeft="@dimen/_16sdp" android:layout_marginTop="@dimen/dp7" android:src="@drawable/ic_warning" android:layout_below="@id/lytOtp" />
    <TextView android:textSize="@dimen/px14" android:textColor="@color/error_warning" android:id="@id/tvErreorWarning" android:paddingLeft="@dimen/_10dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp8" android:layout_marginTop="@dimen/_5sdp" android:layout_marginBottom="@dimen/_16sdp" android:text="@string/jfe_wrong_otp" android:layout_toRightOf="@id/ivWarning" android:layout_below="@id/lytOtp" android:fontFamily="@font/jiotype_medium" android:layout_marginEnd="@dimen/_16sdp" />
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/lytResend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_16sdp" android:layout_marginTop="@dimen/_8sdp" android:layout_marginRight="@dimen/_16sdp" android:layout_below="@id/ivWarning">
        <TextView android:textSize="@dimen/sp16" android:textColor="@color/login_black" android:id="@id/tvReceiveOtp" android:paddingLeft="@dimen/_20sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/jfe_receive_otp" android:fontFamily="@font/jiotype_medium" />
        <TextView android:textSize="@dimen/sp16" android:textColor="@color/resend_top" android:id="@id/tv_resend_otp" android:paddingLeft="@dimen/_5sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/jfe_resend" android:fontFamily="@font/jiotype_bold" />
    </LinearLayout>
    <TextView android:enabled="false" android:textSize="@dimen/_16sp" android:textColor="@color/login_text" android:gravity="center" android:id="@id/btn_otp_submit" android:background="@drawable/button_bg_disable" android:layout_width="fill_parent" android:layout_height="@dimen/px50" android:layout_marginTop="@dimen/dp16" android:layout_marginBottom="@dimen/dp30" android:text="@string/jfe_submit" android:layout_above="@id/tvTerms" android:layout_alignParentBottom="true" android:fontFamily="@font/jiotype_medium" android:layout_marginStart="@dimen/dp16" android:layout_marginEnd="@dimen/dp16" />
    <TextView android:textSize="@dimen/_14sp" android:textColor="@color/login_black" android:id="@id/txtWrongOtpNote" android:paddingLeft="@dimen/_20sdp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16sdp" android:layout_marginBottom="@dimen/_16sdp" android:text="@string/jfe_terms_conditions" android:layout_alignParentBottom="true" android:fontFamily="@font/jiotype_medium" android:layout_marginStart="@dimen/_16sdp" android:layout_marginEnd="@dimen/_16sdp" />
    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/terms_color" android:gravity="center" android:id="@id/tvTerms" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp16" android:layout_marginBottom="@dimen/dp16" android:text="@string/jfe_terms_conditions" android:layout_alignParentBottom="true" android:fontFamily="@font/jiotype_medium" android:layout_marginStart="@dimen/dp16" android:layout_marginEnd="@dimen/dp16" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/lytProgress" android:background="@color/alert_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/progressBar" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/progress_new" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:progressBarStyleLarge" />
        <TextView android:textColor="@color/white" android:id="@id/loggingIn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5dp" android:text="@string/jfe_text_logging" />
        <TextView android:textColor="@color/white" android:id="@id/sendingOtp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5dp" android:text="@string/jfe_text_sending_otp" />
    </LinearLayout>
</RelativeLayout>